--- a/vignettes/ProjetAlex.Rmd
+++ b/vignettes/ProjetAlex.Rmd
@@ -68,9 +68,27 @@ data2017 <- add_year(data2017, 2017)
 ```
 
 ```{r}
-# Now that I have the year of each observation, in order to bind all my data together, I have to change the names in the header
+# Now that I have the year of each observation, in order to bind all my data together, I have to tidy it so I have the same columns in each of my dataframes
+
+data2015 <- data2015 %>% 
+  select(-Region, -Standard.Error)
+data2016 <- data2016 %>% 
+  select(-Region, -Lower.Confidence.Interval, -Upper.Confidence.Interval)
+data2017 <- data2017 %>% 
+  select(-Whisker.high, -Whisker.low)
 
 ```
+```{r}
+#at long last, I can finally bind the data together
+data_Happiness <- bind_rows(data2015, data2016, data2017)
+```
+
+** Now, I can finally plot the evolution of Happiness, and all other indicators, for any country I want **
+
+```{r}
+
+```
+
 
 
 
